test/types/enum/enumOrder.good
red
0
1
2
red
green
blue
enumOrder.chpl:12: error: halt reached - enumerated type out of bounds in chpl__orderToEnum()
